--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 authors = ["Samuel Vargas <Samuel.A.Vargas@asu.edu>"]
 
 [dependencies]
-sdl2 = "0.27.2"
+sdl2 = "0.29.0"
+sdl2-sys = "0.27.2"
+rand = "0.3.15"
